--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+::selection {
+  background: #d4a373; /* Arka plan pas rengi */
+  color: #000; /* Yazı siyah */
+  text-shadow: none;
+}
 :root{
   --bg:#0f1113;
   --bg2:#14181b;
@@ -264,16 +269,7 @@ a:hover{text-decoration:underline;}
   transition: background 0.1s ease; /* Işık yumuşak hareket eder */
 
 }
-/* === ÖZEL SEÇİM RENGİ (Maviyi Yok Etme) === */
-::selection {
-  background: var(--accent); /* Senin pas rengin */
-  color: var(--bg);          /* Yazı koyu olsun ki okunsun */
-}
 
-::-moz-selection { /* Firefox tarayıcısı için */
-  background: var(--accent);
-  color: var(--bg);
-}
 .signature {
   font-family: 'Mrs Saint Delafield', cursive;
   font-size: 3rem;
